--- a/style.css
+++ b/style.css
@@ -11,11 +11,11 @@ body {
 }
 
 .container {
-    background: white;
-    padding: 20px;
+    background: rgb(203, 123, 182);
+    padding: 150px;
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    width: 300px;
+    width: 350px;
     text-align: center;
 }
 
